rust/crates/rax/src/text/rules/snapshots/rax__text__rules__until_not_in_char_set__tests__ascii_keep_left.snap
---
source: crates/rax/src/text/rules/until_not_in_char_set.rs
expression: result
---
Ok(
    (
        "123a",
        "bc",
    ),
)
